style.css
.book-results {
    margin-top: 40px;
    height: 455px;
    width: 280px;
    overflow: auto;
}

.coffee-shop-intro {
    width: 500px;
    margin-top: 40px;
    border-top: 1px solid black;
}

* {
    box-sizing: border-box;
}

#map {
    width: 750px;
    height: 700px;
    display: inline-block;
    border: 1px solid black;
}

#reviews {
    width: 225px;
    height: 700px;
    display: inline-block;
    border: 1px solid black;
    overflow: auto;
}

.reviews-border {
    border-bottom: 1px solid black;
}

.reviews-background {
    background-color: #cccccc;
}

#coffe-shop-input {
    width: 325px;
    height: 27px;
    margin-top: 10px;
}

